syntax="proto3";

import "google/protobuf/empty.proto";

package businessServices;
option go_package=".;services";


message BusinessService {
    int64 businessServiceID = 1;
    string businessServiceName = 2;
    repeated int64 subCategories = 3;
}

message GetBusinessServiceRequest {
    int64 businessServiceID = 1;
}

message GetBusinessServiceResponse {
    BusinessService businessService = 1;
}

message GetBusinessServicesResponse {
    repeated BusinessService businessServices = 1;
}

message CreateBusinessServiceRequest {
    string businessServiceName = 1;
    repeated int64 subCategories = 2;
}

message CreateBusinessServiceResponse {
    BusinessService businessService = 1;
}

message GetServicesUnderSubCategoryRequest {
    int64 SubCategoryID = 1;
}

message GetServicesUnderSubCategoryResponse {
    repeated BusinessService businessServices = 1;
}



service BusinessServices {
    rpc GetBusinessService (GetBusinessServiceRequest) returns (GetBusinessServiceResponse) {}
    rpc GetBusinessServices (google.protobuf.Empty) returns (GetBusinessServicesResponse) {}
    rpc GetServicesUnderSubCategory (GetServicesUnderSubCategoryRequest) returns (GetServicesUnderSubCategoryResponse) {}

    rpc CreateBusinessService (CreateBusinessServiceRequest) returns (CreateBusinessServiceResponse) {}
}
